Ads page implemented as a design without actions / part category required on product module fixed

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -38,7 +38,32 @@
     "manageAccount": "إدارة الحساب",
     "logout": "تسجيل الخروج"
   },
-  "headers": {
-    "ads": "الإعلانات"
+  "components": {
+    "ads": {
+      "mainHeader": "الإعلانات",
+      "top": {
+        "title1": "معرض الصور في رأس الصفحة (عدد 1-6)",
+        "pc_tablet_size_title": "الحاسب الشخصي (1340 x 354 px)",
+        "mobile_size_title": "الجوال (330 x 160 px)"
+      },
+      "middle": {
+        "title": "إعلانات منتصف الصفحة( عدد 3)",
+        "device_size_title": "الحاسب الشخصي والجوال (700 x 560 px)"
+      },
+      "bottom": {
+        "title": "إعلان آخر الصفحة ( عدد 1)",
+        "pc_tablet_size_title": "الحاسب الشخصي (1340 x 354 px)",
+        "mobile_size_title": "الجوال (330 x 160 px)"
+      },
+      "carTypesTitles": {
+        "car": "اعلانات سيارات الركوب",
+        "commercial": "اعلانات المركبات التجارية"
+      },
+      "addBtnText": "إضافة",
+      "downloadBtnText": "تحميل",
+      "deleteBtnText": "حذف",
+      "editBtnText": "تعديل",
+      "uploadImageText": "يرجى إضافة صورة"
+    }
   }
 }
