Date format changed

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,4 +1,8 @@
 {
+  "global": {
+    "submiBtn": "حفظ",
+    "resetBtn": "إلغاء"
+  },
   "sidenav": {
     "main": "الرئيسية",
     "userMgt": "إدارة المستخدمين",
@@ -58,6 +62,11 @@
         "products": "المنتجات",
         "questions": "أسئلة علي المنتجات",
         "tickets": "الشكاوي"
+      },
+      "filterForm": {
+        "title": "أظهار المبيعات خلال مدة محددة",
+        "from": "من",
+        "to": "إلي"
       }
     },
     "ads": {
