--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
+  "global": {
+    "submiBtn": "Submit",
+    "resetBtn": "Reset"
+  },
   "sidenav": {
     "main": "Dashboard",
     "userMgt": "User Management",
@@ -58,6 +62,11 @@
         "products": "Products",
         "questions": "Product Questions",
         "tickets": "Tickets"
+      },
+      "filterForm": {
+        "title": "Filter Sales by period",
+        "from": "From",
+        "to": "To"
       }
     },
     "ads": {
