Notification Icon in Admin dashboard for pending vendors redirects him now to a page for the pending ones only

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -46,6 +46,7 @@
     "dashboard": {
       "admin": {
         "vendors": "البائعين",
+        "pendingVendors": "البائعين بإنتظار الموافقة",
         "clients": "العملاء",
         "products": "المنتجات",
         "sales": "المبيعات (ريال سعودي)",
