--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,6 +46,7 @@
     "dashboard": {
       "admin": {
         "vendors": "Vendors",
+        "pendingVendors": "Pending Vendors",
         "clients": "Clients",
         "products": "Products",
         "sales": "Sales (SAR)",
