Staff member dashboard view updated

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -45,6 +45,7 @@
   },
   "components": {
     "dashboard": {
+      "title": "الرئيسية",
       "admin": {
         "vendors": "البائعين",
         "clients": "العملاء",
