--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,6 +45,7 @@
   },
   "components": {
     "dashboard": {
+      "title": "Dashboard",
       "admin": {
         "vendors": "Vendors",
         "clients": "Clients",
