Fixed submit Button translation key in English file

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "global": {
     "currency": "SAR",
-    "submiBtn": "Submit",
+    "submitBtn": "Submit",
     "resetBtn": "Reset",
     "editBtn": "Edit",
     "deleteBtn": "Delete",
