Products: Added Tyres Spec 3 new fields (width/height/size)

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -93,6 +93,14 @@
         "category": "الفئة"
       }
     },
+    "products": {
+      "form": {
+        "tyresSpecsTitle": "الخصائص",
+        "width": "مقاس الجنط",
+        "height": "عرض الإطار",
+        "size": "إرتفاع الإطار"
+      }
+    },
     "ads": {
       "mainHeader": "الإعلانات",
       "top": {
