Product: fixed tyres labels order

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -96,9 +96,9 @@
     "products": {
       "form": {
         "tyresSpecsTitle": "الخصائص",
-        "width": "مقاس الجنط",
-        "height": "عرض الإطار",
-        "size": "إرتفاع الإطار"
+        "width": "عرض الإطار",
+        "height": "إرتفاع الإطار",
+        "size": "مقاس الجنط"
       }
     },
     "ads": {
